# tier-synthesis

./: .gitignore  COMPONENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: version-sync.yml
chara-rec-app/: main.py  requirements.txt
chara-rec-app/routers/: auth_router.py  base_layout.py  images_router.py  tierlist_router.py
tier-synthesis/: main.py
tier-synthesis/routers/: __init__.py  auth_router.py  base_layout.py  images_router.py  tierlist_router.py  users_router.py
tier_synthesis/: main.py  migrations.py  requirements.txt
tier_synthesis/components/: hot_takes.py  image_card.py  image_cropper.py  image_grid.py  modal.py  popular_images.py  user_display.py
tier_synthesis/docs/: privacy.md  terms.md
tier_synthesis/routers/: __init__.py  base_layout.py  category_utils.py  groups_router.py  images_router.py  latent_router.py  profile_router.py  tierlist_router.py  users_router.py
tier_synthesis/services/: storage.py
tier_synthesis/static/: styles.css
