[project]
name = "tier-synthesis"
version = "0.5.0"
description = "A collaborative tier list platform for analyzing character preferences"
authors = [{name = "Taksqth", email = "gabriel.takeshi.higa@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["tier-list", "collaborative-filtering", "character-analysis"]
requires-python = ">=3.10"
dependencies = [
    "python-fasthtml==0.12.33",
    "pillow>=11.1.0",
    "scikit-learn>=1.7.2",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
    "mypy>=1.0.0",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
